--- a/message/templates/message/form.html
+++ b/message/templates/message/form.html
@@ -7,17 +7,14 @@
           <h1 class="jumbotron-heading">Album example</h1>
           <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
 
-            <form method="post">
-                    {% csrf_token%}
-                {{ form.as_p}}
+            <form method="post"> {% csrf_token%}
+
+                {{ form.as_p }}
 
                 <input class="btn btn-primary" type = 'submit' value = 'Save'/>
 
             </form>
 
-                <p>
-                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-               </p>
         </div>
     </section>
 
