--- a/message/templates/message/home.html
+++ b/message/templates/message/home.html
@@ -1,24 +1,24 @@
-{% extends 'base.html' %}
+    {% extends 'base.html' %}
 
-{% block content%}
+    {% block content%}
 
-    <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Album example</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+        <section class="jumbotron text-center">
 
-            <form method="post">
-                    {% csrf_token%}
-                {{ form.as_p}}
+            <div class="container">
+              <h1 class="jumbotron-heading">Album example</h1>
+              <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p
+            </div>
 
-                <input class="btn btn-primary" type = 'submit' value = 'Save'/>
+            <div class="container text-left">
 
-            </form>
+                    <form method="post">
+                            {% csrf_token%}
+                            {{ form.as_p}}
+                        <input class="btn btn-primary" type = 'submit' value = 'Send'/>
+                    </form>
 
-                <p>
-                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-               </p>
-        </div>
-    </section>
+            </div>
 
-{% endblock%}
+        </section>
+
+    {% endblock%}
