--- a/message/templates/message/dashboard.html
+++ b/message/templates/message/dashboard.html
@@ -4,7 +4,7 @@
 
 <div class = "container">
     </br>
-     <h1 class="jumbotron-heading">Confirm</h1>
+     <h1 class="jumbotron-heading">Dashboard</h1>
 
 
 </div>
