--- a/message/templates/message/home.html
+++ b/message/templates/message/home.html
@@ -3,7 +3,7 @@
 {% block content%}
 {% load staticfiles %}
 
-<div class="container">
+<div class="container text-center">
 
         <br/>
 
@@ -15,7 +15,15 @@
 
             <form method="post">
                     {% csrf_token%}
-                    {{ form.as_p}}
+                    {% load widget_tweaks %}
+                    {% for field in form %}
+
+                    <div class = "form-group {% if field.errors %} alert alert-danger {% endif %}">
+                        {{ field.errors }}
+                        {% render_field field class="form-control" %}
+                    </div>
+                    {% endfor %}
+
                 <input class="btn btn-primary" type = 'submit' value = 'Send'/>
             </form>
 
