--- a/message/templates/message/confirm.html
+++ b/message/templates/message/confirm.html
@@ -4,9 +4,9 @@
 
 <div class = "container">
     </br>
-     <h1 class="jumbotron-heading">Confirm</h1>
+     <h1 class="jumbotron-heading">Success!</h1>
 
-    <h5>You have sent: {{ inputMessage.body }}</h5>
+    <p>You have sent: {{ inputMessage.body }}</p>
 
 </div>
 
