--- a/message/templates/registration/login.html
+++ b/message/templates/registration/login.html
@@ -7,7 +7,21 @@
     <h1 class="jumbotron-heading">Login</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        {% if form.non_field_errors %}<div class="alert alert-danger">{{ form.non_field_errors }}</div>{% endif %}
+         {% load widget_tweaks %}
+
+
+       {% for field in form %}
+
+        <div class="form-group {% if field.errors %} alert alert-danger {% endif %}">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {% render_field field class="form-control" %}
+            {% if field.help_text %}<small class="text_muted">{{ field.help_text|safe }}</small>{% endif %}
+
+        </div>
+        {% endfor %}
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
 
