--- a/slackify/templates/base.html
+++ b/slackify/templates/base.html
@@ -9,6 +9,7 @@
   <title>&#128512Slackify Me!</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link href="{% static 'custom.css' %}" rel="stylesheet">
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/ico">
 </head>
 
 <body>
