--- a/message/templates/message/confirm.html
+++ b/message/templates/message/confirm.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_with_nav.html' %}
 
 {% block content %}
 
 <div class = "container">
     </br>
-     <h1 class="jumbotron-heading">Success!</h1>
+     <h1 class="big-heading">Success!</h1>
 
     <p>You have sent: {{ inputMessage.body }}</p>
 
