--- a/message/static/styles.css
+++ b/message/static/styles.css
@@ -69,10 +69,10 @@ p {
 
 /* Title Image */
 .title-image {
-  width: 60%;
-  transform: rotate(250deg);
+  width: 70%;
+  transform: rotate(25deg);
   position: absolute;
-  right: 30%;
+  right: 20%;
 }
 
 /* Features section */
@@ -126,7 +126,7 @@ p {
 }
 
 /* Pricing Section */
-#pricing {
+#tryNow {
   padding: 100px;
   text-align: center;
 }
