--- a/message/templates/message/dashboard.html
+++ b/message/templates/message/dashboard.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_with_nav.html' %}
 
 {% block content %}
 
 <div class = "container">
     </br>
-     <h1 class="jumbotron-heading">{{ user.username }}'s Dashboard</h1>
+     <h1 class="big-heading">{{ user.username }}'s Dashboard</h1>
      </br>
     <h4>Historic Messages </h4>
 
