--- a/message/templates/message/home.html
+++ b/message/templates/message/home.html
@@ -17,18 +17,27 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
         <ul class="navbar-nav ml-auto">
+
           <li class="nav-item">
-            <a class="nav-link" href="#footer">Contact</a>
+            <a class="nav-link" href="#tryNow">Try Now</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#pricing">Try Now</a>
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
           </li>
+          {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
+          {% endif %}
+          {% if user.is_authenticated == False %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
           </li>
+          {% endif %}
         </ul>
 
       </div>
@@ -37,10 +46,11 @@
     <div class="row">
 
       <div class="col-lg-7">
-        <h1 class="big-heading">Finally, millennials will read your messages. </h1>
-        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+        <h1 class="big-heading">Add emojis 😃❤️ to your Slack messages</h1>
+        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Mobile
+          App</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
-          Download</button>
+          Coming Soon</button>
       </div>
 
       <div class="col-lg-5">
@@ -52,4 +62,86 @@
   </div>
 </section>
 
-{% endblock%}
+<section id="features">
+
+  <div class="row">
+
+    <div class="col-lg-4 feature-box">
+      <i class="icon fas fa-check-circle"></i>
+      <h3>Easy to use.</h3>
+      <p>So easy to use, even QRM could do it.</p>
+    </div>
+    <div class="col-lg-4 feature-box">
+      <i class="icon fas fa-bullseye"></i>
+      <h3>Elite emojis</h3>
+      <p>We have all the emojis, the greatest emojis.</p>
+    </div>
+    <div class="col-lg-4 feature-box">
+      <i class="icon fas fa-heart"></i>
+      <h3>Guaranteed to work.</h3>
+      <p>Deliver your message in style or your money back.</p>
+    </div>
+
+  </div>
+
+</section>
+
+<section id="testimonials">
+
+  <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <h2>I no longer have to manually add emojis. I've found the hottest Django web app in town. Pow!</h2>
+        <img class="testimonial-image" src="{% static 'boy.svg' %}" alt="dog-profile">
+        <em>Chad, London</em>
+      </div>
+      <div class="carousel-item">
+        <h2 class="testimonial-text">My phone used to be so lonely, but with Slackify Me, my phone has been buzzing all
+          the time. I think.</h2>
+        <img class="testimonial-image" src="{% static 'girl.svg' %}" alt="lady-profile">
+        <em>Tracy, Warrington</em>
+      </div>
+
+    </div>
+
+    <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" </span> </a>
+    <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" </span></span> </a> </div> </section> <!-- Press -->
+
+
+          <section id="tryNow">
+
+              <h2>Try Now</h2>
+
+
+            <form method="post">
+              {% csrf_token%}
+              {% load widget_tweaks %}
+              {% for field in form %}
+              <div class="form-group {% if field.errors %} alert alert-danger {% endif %}">
+                {{ field.errors }}
+                {% render_field field class="form-control" %}
+              </div>
+              {% endfor %}
+
+              <input class="btn btn-primary" type='submit' value='Send' />
+            </form>
+
+          </section>
+
+          <!-- Call to Action -->
+
+          <section id="cta">
+              <div class="container">
+                <h3 class="cta-heading">Find your destined emojis today.</h3>
+                <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+                  Mobile App</button>
+                <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>
+                  Coming Soon</button>
+
+              </div>
+
+            </section>
+
+          {% endblock%}
