--- a/message/templates/registration/signup.html
+++ b/message/templates/registration/signup.html
@@ -18,7 +18,7 @@
             {{ field.errors }}
             {{ field.label_tag }}
             {% render_field field class="form-control" %}
-            {% if field.help_text %}<small class="text_muted">{{ field.help_text|safe }}</small>{% endif %}
+            <!-- {% if field.help_text %}<small class="text_muted">{{ field.help_text|safe }}</small>{% endif %} -->
 
         </div>
         {% endfor %}
