--- a/static/styles.css
+++ b/static/styles.css
@@ -70,7 +70,7 @@ p {
 /* Title Image */
 .title-image {
   width: 70%;
-  transform: rotate(250deg);
+  transform: rotate(25deg);
   position: absolute;
   right: 20%;
 }
@@ -126,7 +126,7 @@ p {
 }
 
 /* Pricing Section */
-#pricing {
+#tryNow {
   padding: 100px;
   text-align: center;
 }
