--- a/message/static/styles.css
+++ b/message/static/styles.css
@@ -170,3 +170,14 @@ p {
 .social-icon{
   margin:20px 10px;
 }
+
+.message-form{
+  margin-top: 50px;
+}
+
+
+.confirm {
+  
+  text-align: center;
+
+}
