--- a/message/templates/message/confirm.html
+++ b/message/templates/message/confirm.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class = "container">
+<div class = "container confirm">
     </br>
      <h1 class="big-heading">Success!</h1>
 
