added ! to Try Now

--- a/message/templates/message/home.html
+++ b/message/templates/message/home.html
@@ -19,7 +19,7 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item">
-            <a class="nav-link" href="#tryNow">Try Now</a>
+            <a class="nav-link" href="#tryNow">Try Now!</a>
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
